@@ -1,6 +1,6 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.9.4
+VERSION=1.9.5
 
 DEPENDENCY="zeda=1.5.10;zm=1.3.5"
 
